--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "vue": "^3.5.11",
+    "vue": "^3.5.12",
+    "vue-axios": "^3.5.2",
+    "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@types/node": "^22.8.1",
+    "@types/vue": "^2.0.0",
+    "@types/vue-router": "^2.0.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.0.0",
     "autoprefixer": "^10.4.20",
